--- a/The wandering heretic/The wandering heretic/The wandering heretic.vcxproj.filters
+++ b/The wandering heretic/The wandering heretic/The wandering heretic.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="GameScene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LevelEditor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -74,6 +77,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameScene.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LevelEditor.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
