--- a/The wandering heretic/GameEngine/GameEngine.vcxproj
+++ b/The wandering heretic/GameEngine/GameEngine.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Audio.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="InputText.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="PopUpWindow.cpp" />
@@ -154,6 +155,7 @@
     <ClInclude Include="Audio.hpp" />
     <ClInclude Include="Button.hpp" />
     <ClInclude Include="Entity.hpp" />
+    <ClInclude Include="InputText.hpp" />
     <ClInclude Include="JsonParser.hpp" />
     <ClInclude Include="Keyboard.hpp" />
     <ClInclude Include="Math.hpp" />
