--- a/The wandering heretic/GameEngine/GameEngine.vcxproj
+++ b/The wandering heretic/GameEngine/GameEngine.vcxproj
@@ -140,8 +140,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Audio.cpp" />
+    <ClCompile Include="BasePlayer.cpp" />
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="ChooseNumber.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="GIF.cpp" />
     <ClCompile Include="InputText.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="Mouse.cpp" />
@@ -153,8 +156,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Audio.hpp" />
+    <ClInclude Include="BasePlayer.h" />
     <ClInclude Include="Button.hpp" />
+    <ClInclude Include="ChooseNumber.hpp" />
     <ClInclude Include="Entity.hpp" />
+    <ClInclude Include="GIF.h" />
     <ClInclude Include="InputText.hpp" />
     <ClInclude Include="JsonParser.hpp" />
     <ClInclude Include="Keyboard.hpp" />
