Fixed bugs with the new GIF class FIxed bugs in the Square class

--- a/The wandering heretic/GameEngine/GameEngine.vcxproj
+++ b/The wandering heretic/GameEngine/GameEngine.vcxproj
@@ -160,7 +160,7 @@
     <ClInclude Include="Button.hpp" />
     <ClInclude Include="ChooseNumber.hpp" />
     <ClInclude Include="Entity.hpp" />
-    <ClInclude Include="GIF.h" />
+    <ClInclude Include="GIF.hpp" />
     <ClInclude Include="InputText.hpp" />
     <ClInclude Include="JsonParser.hpp" />
     <ClInclude Include="Keyboard.hpp" />
