--- a/The wandering heretic/GameEngine/GameEngine.vcxproj.filters
+++ b/The wandering heretic/GameEngine/GameEngine.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="Enemy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TextSquare.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Keyboard.hpp">
@@ -117,6 +120,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Enemy.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TextSquare.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
