Fixed some logic and added the base for the SignIn class

--- a/The wandering heretic/The wandering heretic/The wandering heretic.vcxproj.filters
+++ b/The wandering heretic/The wandering heretic/The wandering heretic.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="GamePlayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SignIn.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -70,9 +73,6 @@
     <ClInclude Include="GameManager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Player.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="WelcomeScene.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -92,6 +92,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GamePlayer.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SignIn.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
