--- a/The wandering heretic/The wandering heretic/The wandering heretic.vcxproj
+++ b/The wandering heretic/The wandering heretic/The wandering heretic.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="HomeScene.cpp" />
     <ClCompile Include="LevelEditor.cpp" />
     <ClCompile Include="Setting.cpp" />
+    <ClCompile Include="SignIn.cpp" />
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="WelcomeScene.cpp" />
   </ItemGroup>
@@ -52,8 +53,8 @@
     <ClInclude Include="GameWorld.hpp" />
     <ClInclude Include="HomeScene.hpp" />
     <ClInclude Include="LevelEditor.hpp" />
-    <ClInclude Include="Player.hpp" />
     <ClInclude Include="Setting.hpp" />
+    <ClInclude Include="SignIn.hpp" />
     <ClInclude Include="WelcomeScene.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
