--- a/The wandering heretic/GameEngine/GameEngine.vcxproj
+++ b/The wandering heretic/GameEngine/GameEngine.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="PopUpWindow.cpp" />
     <ClCompile Include="RenderWindow.cpp" />
+    <ClCompile Include="Server.cpp" />
     <ClCompile Include="Slider.cpp" />
     <ClCompile Include="Square.cpp" />
     <ClCompile Include="TextSquare.cpp" />
@@ -174,6 +175,7 @@
     <ClInclude Include="Platforms.hpp" />
     <ClInclude Include="PopUpWindow.hpp" />
     <ClInclude Include="RenderWindow.hpp" />
+    <ClInclude Include="Server.hpp" />
     <ClInclude Include="Slider.hpp" />
     <ClInclude Include="Square.hpp" />
     <ClInclude Include="TextSquare.hpp" />
