--- a/The wandering heretic/GameEngine/GameEngine.vcxproj
+++ b/The wandering heretic/GameEngine/GameEngine.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="InputText.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="Mouse.cpp" />
+    <ClCompile Include="PopUpMessageBox.cpp" />
     <ClCompile Include="PopUpWindow.cpp" />
     <ClCompile Include="RenderWindow.cpp" />
     <ClCompile Include="Slider.cpp" />
@@ -171,6 +172,7 @@
     <ClInclude Include="Keyboard.hpp" />
     <ClInclude Include="Math.hpp" />
     <ClInclude Include="Mouse.hpp" />
+    <ClInclude Include="PopUpMessageBox.hpp" />
     <ClInclude Include="PopUpWindow.hpp" />
     <ClInclude Include="RenderWindow.hpp" />
     <ClInclude Include="Slider.hpp" />
