--- a/The wandering heretic/The wandering heretic/The wandering heretic.vcxproj
+++ b/The wandering heretic/The wandering heretic/The wandering heretic.vcxproj
@@ -30,7 +30,7 @@
     <ClCompile Include="Setting.cpp" />
     <ClCompile Include="SignIn.cpp" />
     <ClCompile Include="SignUp.cpp" />
-    <ClCompile Include="Test.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="WelcomeScene.cpp" />
   </ItemGroup>
   <ItemGroup>
